--- a/stylesheets/sass/utilities/_variables.scss
+++ b/stylesheets/sass/utilities/_variables.scss
@@ -11,6 +11,6 @@ $jet-stream: #A8CCC8;
 $fs-small:   15px;
 $fs-medium:  18px;
 $fs-large:   20px;
-$fs-xlarge:  23px;
+$fs-xlarge:  24px;
 $fs-xxlarge: 30px;
 $fs-h1:      40px;
