--- a/stylesheets/sass/utilities/inputs/_number.scss
+++ b/stylesheets/sass/utilities/inputs/_number.scss
@@ -1,6 +1,6 @@
 input[type=number] {
   @extend .merel-light;
-  font-size: $fs-xxlarge;
+  font-size: $fs-xlarge;
   width: 40px;
   height: 40px;
   padding: 0;
